--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@types/aos": "^3.0.3",
+    "@types/p5": "^0.9.1",
+    "aos": "^2.3.4",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
+    "p5": "^1.2.0",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -26,6 +34,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "typescript": "~3.9.3"
+    "tailwindcss": "^0.6.1",
+    "typescript": "~3.9.3",
+    "vue-cli-plugin-tailwind": "~2.0.6",
+    "vue-cli-plugin-tailwindcss": "~0.1.1"
   }
 }
