--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/aos": "^3.0.3",
     "@types/p5": "^0.9.1",
     "aos": "^2.3.4",
@@ -18,9 +18,12 @@
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-i18n": "^9.0.0-rc.7",
+    "vue-router": "^4.0.0-0",
+    "vue-typed-emit": "^1.1.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^2.0.0-rc.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -34,8 +37,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "tailwindcss": "^0.6.1",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-i18n": "~2.0.0",
     "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-cli-plugin-tailwindcss": "~0.1.1"
   }
