--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0-rc.7",
+    "vue-inline-svg": "^3.0.0-beta.2",
     "vue-router": "^4.0.0-0",
     "vue-typed-emit": "^1.1.0"
   },
